# SCERSE-Syntax-Guardian

./: CMakeLists.txt
examples/: simple.scr
src/: main.cpp
src/common/: AST.hpp  Error.hpp  Types.hpp
src/gui/: CodeEditor.cpp  CodeEditor.hpp  ErrorConsole.cpp  ErrorConsole.hpp  MainWindow.cpp  MainWindow.hpp  SymbolTableView.cpp  SymbolTableView.hpp  SyntaxHighlighter.cpp  SyntaxHighlighter.hpp
src/lexer/: Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp
src/parser/: Grammar.cpp  Grammar.hpp  LR1Parser.cpp  LR1Parser.hpp
src/recovery/: SuggestionEngine.cpp  SuggestionEngine.hpp
src/semantic/: SymbolTable.cpp  SymbolTable.hpp
